# ilpostcast

./: .gitignore  Dockerfile  Dockerfile.server  README.md  docker-compose-server.yml  docker-compose.yml  get_geckodriver.sh  pyproject.toml  requirements.txt
ilpostcast/: app.py  rss.py  scrape.py  scrape_new.py  sqlite_interface.py
